--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -29,9 +29,9 @@
           <!-- prettier-ignore -->
           <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
           <ul class="header-nav-list list">
-            <li class="header-nav-item"><a class="header-nav-link link current" href="./index.html">Студия</a></li>
-            <li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html">Портфолио</a></li>
-            <li class="header-nav-item"><a class="header-nav-link link" href="">Контакты</a></li>
+            <li class="header-nav-item"><a class="header-nav-link link current" href="./index.html">Студія</a></li>
+            <li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="header-nav-item"><a class="header-nav-link link" href="">Контакти</a></li>
           </ul>
         </nav>
         <ul class="header-contacts-list list">
@@ -49,36 +49,30 @@
       <!--========== HERO SECTION ==========-->
       <section class="hero-section">
         <div class="container">
-          <h1 class="hero-heading">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-btn" type="button">Заказать услугу</button>
+          <h1 class="hero-heading">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-btn" type="button">Замовити послугу</button>
         </div>
       </section>
       <!--========== FEATURES SECTION ==========-->
       <section class="features-section section">
         <div class="container">
-          <h2 class="features-heading visually-hidden">Особенности</h2>
+          <h2 class="features-heading visually-hidden">Особливості</h2>
           <ul class="features-list list">
             <li class="features-item">
-              <h3 class="features-title">Внимание к деталям</h3>
-              <p class="features-text">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
-              </p>
+              <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li class="features-item">
-              <h3 class="features-title">Пунктуальность</h3>
-              <p class="features-text">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-              </p>
+              <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="features-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li class="features-item">
-              <h3 class="features-title">Планирование</h3>
-              <p class="features-text">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
-              </p>
+              <h3 class="features-title">ПЛАНУВАННЯ</h3>
+              <p class="features-text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li class="features-item">
-              <h3 class="features-title">Современные технологии</h3>
-              <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+              <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="features-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
           </ul>
         </div>
@@ -86,10 +80,10 @@
       <!--========== SERVICE SECTION ==========-->
       <section class="service-section section">
         <div class="container">
-          <h2 class="service-heading">Чем мы занимаемся</h2>
+          <h2 class="service-heading">Чим ми займаємося</h2>
           <ul class="service-list list">
-            <li class="service-item"><img src="./img/what-we-do-1.jpg" alt="Програмирование" width="370" /></li>
-            <li class="service-item"><img src="./img/what-we-do-2.jpg" alt="Адаптивная верстка" width="370" /></li>
+            <li class="service-item"><img src="./img/what-we-do-1.jpg" alt="Програмування" width="370" /></li>
+            <li class="service-item"><img src="./img/what-we-do-2.jpg" alt="Адаптивна верстка" width="370" /></li>
             <li class="service-item"><img src="./img/what-we-do-3.jpg" alt="Дизайн" width="370" /></li>
           </ul>
         </div>
@@ -100,30 +94,30 @@
           <h2 class="team-heading">Наша команда</h2>
           <ul class="teammate-list list">
             <li class="teammate-item">
-              <img src="./img/teammate1.jpg" alt="Фото Игоря Демьяненко" width="270" />
+              <img src="./img/teammate1.jpg" alt="Фото Игоря Дем'яненка" width="270" />
               <div class="teammate-content">
-                <h3 class="teammate-name">Игорь Демьяненко</h3>
+                <h3 class="teammate-name">Игор Дем'яненко</h3>
                 <p class="teammate-text" lang="en">Product Designer</p>
               </div>
             </li>
             <li class="teammate-item">
-              <img src="./img/teammate2.jpg" alt="Фото Ольги Репиной" width="270" />
+              <img src="./img/teammate2.jpg" alt="Фото Ольги Рєпіної" width="270" />
               <div class="teammate-content">
-                <h3 class="teammate-name">Ольга Репина</h3>
+                <h3 class="teammate-name">Ольга Рєпіна</h3>
                 <p class="teammate-text" lang="en">Frontend Developer</p>
               </div>
             </li>
             <li class="teammate-item">
-              <img src="./img/teammate3.jpg" alt="Фото Николая Тарасова" width="270" />
+              <img src="./img/teammate3.jpg" alt="Фото Миколи Тарасова" width="270" />
               <div class="teammate-content">
-                <h3 class="teammate-name">Николай Тарасов</h3>
+                <h3 class="teammate-name">Микола Тарасов</h3>
                 <p class="teammate-text" lang="en">Marketing</p>
               </div>
             </li>
             <li class="teammate-item">
-              <img src="./img/teammate4.jpg" alt="Фото Михаила Ермакова" width="270" />
+              <img src="./img/teammate4.jpg" alt="Фото Михайла Єрмакова" width="270" />
               <div class="teammate-content">
-                <h3 class="teammate-name">Михаил Ермаков</h3>
+                <h3 class="teammate-name">Михайло Єрмаков</h3>
                 <p class="teammate-text" lang="en">UI Designer</p>
               </div>
             </li>
@@ -145,7 +139,7 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                г. Киев, пр-т Леси Украинки, 26
+                м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
             <li class="footer-contacts-item">
