--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -29,11 +29,11 @@
           <!-- prettier-ignore -->
           <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
           <ul class="header-nav-list list">
-            <li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Студия</a></li>
+            <li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Студія</a></li>
             <li class="header-nav-item">
-              <a class="header-nav-link link current" href="./portfolio.html">Портфолио</a>
+              <a class="header-nav-link link current" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="header-nav-item"><a class="header-nav-link link" href="">Контакты</a></li>
+            <li class="header-nav-item"><a class="header-nav-link link" href="">Контакти</a></li>
           </ul>
         </nav>
         <ul class="header-contacts-list list">
@@ -49,12 +49,12 @@
     <!-- ========== PORTFOLIO SECTION ========== -->
     <section class="portfolio-section section">
       <div class="container">
-        <h1 class="portfolio-heading visually-hidden">Портфолио</h1>
+        <h1 class="portfolio-heading visually-hidden">Портфоліо</h1>
         <!-- ======= PORTFOLIO FILTERS ========== -->
         <ul class="portfolio-filter-list list">
           <li class="filter-item"><button class="filter-btn" type="button">Все</button></li>
-          <li class="filter-item"><button class="filter-btn" type="button">Веб-сайты</button></li>
-          <li class="filter-item"><button class="filter-btn" type="button">Приложения</button></li>
+          <li class="filter-item"><button class="filter-btn" type="button">Веб-сайти</button></li>
+          <li class="filter-item"><button class="filter-btn" type="button">Додатки</button></li>
           <li class="filter-item"><button class="filter-btn" type="button">Дизайн</button></li>
           <li class="filter-item"><button class="filter-btn" type="button">Маркетинг</button></li>
         </ul>
@@ -62,7 +62,7 @@
         <ul class="portfolio-list list">
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-1.jpg" alt="Ноутбука с открытым сайтом компании" width="370" />
+              <img src="./img/portfolio-img-1.jpg" alt="Ноутбук з відкритим сайтом компанії" width="370" />
               <div class="card-content">
                 <h2 class="portfolio-name">Технокряк</h2>
                 <p class="portfolio-type">Веб-сайт</p>
@@ -71,7 +71,7 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-2.jpg" alt="Постер баскетбольного матча" width="370" />
+              <img src="./img/portfolio-img-2.jpg" alt="Постер баскетбольного матчу" width="370" />
               <div class="card-content">
                 <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
                 <p class="portfolio-type">Дизайн</p>
@@ -80,16 +80,16 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-3.jpg" alt="Логотип ресторана" width="370" />
+              <img src="./img/portfolio-img-3.jpg" alt="Логотип ресторану" width="370" />
               <div class="card-content">
                 <h2 class="portfolio-name">Ресторан Seafood</h2>
-                <p class="portfolio-type">Приложение</p>
+                <p class="portfolio-type">Додаток</p>
               </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-4.jpg" alt="Наушники закрытого типа" width="370" />
+              <img src="./img/portfolio-img-4.jpg" alt="Навушники закритого типу" width="370" />
               <div class="card-content">
                 <h2 class="portfolio-name">Проект Prime</h2>
                 <p class="portfolio-type">Маркетинг</p>
@@ -98,34 +98,34 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-5.jpg" alt="Подарочные коробки" width="370" />
+              <img src="./img/portfolio-img-5.jpg" alt="Подарункові коробки" width="370" />
               <div class="card-content">
                 <h2 class="portfolio-name">Проект Boxes</h2>
-                <p class="portfolio-type">Приложение</p>
+                <p class="portfolio-type">Додаток</p>
               </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-6.jpg" alt="Монитор с открытым сайтом компании" width="370" />
+              <img src="./img/portfolio-img-6.jpg" alt="Монітор з відкритим сайтом компанії" width="370" />
               <div class="card-content">
-                <h2 class="portfolio-name">Inspiration has no Borders</h2>
+                <h2 class="portfolio-name" lang="en">Inspiration has no Borders</h2>
                 <p class="portfolio-type">Веб-сайт</p>
               </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-7.jpg" alt="Разворот журнала" width="370" />
+              <img src="./img/portfolio-img-7.jpg" alt="Разворот журналу" width="370" />
               <div class="card-content">
-                <h2 class="portfolio-name">Издание Limited Edition</h2>
+                <h2 class="portfolio-name">Видання Limited Edition</h2>
                 <p class="portfolio-type">Дизайн</p>
               </div>
             </a>
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-8.jpg" alt="Элегантная белая этикетка" width="370" />
+              <img src="./img/portfolio-img-8.jpg" alt="Елегантна біла етикетка" width="370" />
               <div class="card-content">
                 <h2 class="portfolio-name">Проект LAB</h2>
                 <p class="portfolio-type">Маркетинг</p>
@@ -134,10 +134,10 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-9.jpg" alt="Открытое приложение на ноутбуке" width="370" />
+              <img src="./img/portfolio-img-9.jpg" alt="Відкритий додаток на ноутбуці" width="370" />
               <div class="card-content">
                 <h2 class="portfolio-name">Growing Business</h2>
-                <p class="portfolio-type">Приложение</p>
+                <p class="portfolio-type">Додаток</p>
               </div>
             </a>
           </li>
@@ -158,7 +158,7 @@
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                г. Киев, пр-т Леси Украинки, 26
+                м. Київ, пр-т Лесі Українки, 26
               </a>
             </li>
             <li class="footer-contacts-item">
