--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-
+    <link rel="shortcut icon" href="./img/favicon-w.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -36,10 +36,18 @@
         </nav>
         <ul class="header-contacts-list list">
           <li class="header-contacts-item">
-            <a class="header-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-contacts-link link" href="mailto:info@devstudio.com">
+              <svg class="contacts-icon" width="16" height="12"><use href="./img/sprite.svg#envelope"></use></svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="header-contacts-item">
-            <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="header-contacts-link link" href="tel:+380961111111">
+              <svg class="contacts-icon" width="10" height="16">
+                <use href="./img/sprite.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -80,7 +88,7 @@
       <!--========== SERVICE SECTION ==========-->
       <section class="service-section section">
         <div class="container">
-          <h2 class="service-heading">Чим ми займаємося</h2>
+          <h2 class="service-heading section-heading">Чим ми займаємося</h2>
           <ul class="service-list list">
             <li class="service-item"><img src="./img/what-we-do-1.jpg" alt="Програмування" width="370" /></li>
             <li class="service-item"><img src="./img/what-we-do-2.jpg" alt="Адаптивна верстка" width="370" /></li>
@@ -91,13 +99,43 @@
       <!--========== OUR TEAM SECTION ==========-->
       <section class="team-section section">
         <div class="container">
-          <h2 class="team-heading">Наша команда</h2>
+          <h2 class="team-heading section-heading">Наша команда</h2>
           <ul class="teammate-list list">
             <li class="teammate-item">
               <img src="./img/teammate1.jpg" alt="Фото Игоря Дем'яненка" width="270" />
               <div class="teammate-content">
                 <h3 class="teammate-name">Игор Дем'яненко</h3>
                 <p class="teammate-text" lang="en">Product Designer</p>
+                <ul class="teammate-social-list list">
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20" width="20" height="20">
+                        <use href="./img/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="teammate-item">
@@ -105,6 +143,36 @@
               <div class="teammate-content">
                 <h3 class="teammate-name">Ольга Рєпіна</h3>
                 <p class="teammate-text" lang="en">Frontend Developer</p>
+                <ul class="teammate-social-list list">
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="teammate-item">
@@ -112,6 +180,36 @@
               <div class="teammate-content">
                 <h3 class="teammate-name">Микола Тарасов</h3>
                 <p class="teammate-text" lang="en">Marketing</p>
+                <ul class="teammate-social-list list">
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="teammate-item">
@@ -119,7 +217,75 @@
               <div class="teammate-content">
                 <h3 class="teammate-name">Михайло Єрмаков</h3>
                 <p class="teammate-text" lang="en">UI Designer</p>
+                <ul class="teammate-social-list list">
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="teammate-social-item">
+                    <a class="teammate-social-link link" href="">
+                      <svg class="teammate-social-icon" width="20" height="20">
+                        <use href="./img/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--========== OUR CLIENTS SECTION ==========-->
+      <section class="clients-section section">
+        <div class="container">
+          <h2 class="clients-heading section-heading">Постійні клієнти</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60"><use href="./img/sprite.svg#Logo1"></use></svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60"><use href="./img/sprite.svg#Logo2"></use></svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60"><use href="./img/sprite.svg#Logo3"></use></svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60"><use href="./img/sprite.svg#Logo4"></use></svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60"><use href="./img/sprite.svg#Logo5"></use></svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60"><use href="./img/sprite.svg#Logo6"></use></svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -127,29 +293,58 @@
     </main>
     <!--================= FOOTER ==========-->
     <footer class="footer">
-      <div class="container">
-        <!-- prettier-ignore -->
-        <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
-        <address class="footer-contacts">
-          <ul class="footer-contacts-list list">
-            <li class="footer-contacts-item">
-              <a
-                class="footer-contacts-link address link"
-                href="https://goo.gl/maps/namVYLT5pjn7duQN9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                м. Київ, пр-т Лесі Українки, 26
+      <div class="container footer-wrap">
+        <div class="footer-address-wrap">
+          <!-- prettier-ignore -->
+          <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
+          <address class="footer-contacts">
+            <ul class="footer-contacts-list list">
+              <li class="footer-contacts-item">
+                <a
+                  class="footer-contacts-link address link"
+                  href="https://goo.gl/maps/namVYLT5pjn7duQN9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  м. Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li class="footer-contacts-item">
+                <a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="footer-contacts-item">
+                <a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social-wrap">
+          <h3 class="footer-social-heading">приєднуйтесь</h3>
+          <ul class="footer-social-list list">
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="social-link-ico" width="20" height="20">
+                  <use href="./img/sprite.svg#instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="footer-contacts-item">
-              <a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="social-link-ico" width="20" height="20"><use href="./img/sprite.svg#twitter"></use></svg>
+              </a>
             </li>
-            <li class="footer-contacts-item">
-              <a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="social-link-ico" width="20" height="20"><use href="./img/sprite.svg#facebook"></use></svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="social-link-ico" width="20" height="20"><use href="./img/sprite.svg#linkedin"></use></svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
