--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="shortcut icon" href="./img/favicon-w.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -38,10 +39,18 @@
         </nav>
         <ul class="header-contacts-list list">
           <li class="header-contacts-item">
-            <a class="header-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-contacts-link link" href="mailto:info@devstudio.com">
+              <svg class="contacts-icon" width="16" height="12"><use href="./img/sprite.svg#envelope"></use></svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="header-contacts-item">
-            <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="header-contacts-link link" href="tel:+380961111111">
+              <svg class="contacts-icon" width="10" height="16">
+                <use href="./img/sprite.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -146,29 +155,58 @@
     </section>
     <!-- ============= FOOTER ========== -->
     <footer class="footer">
-      <div class="container">
-        <!-- prettier-ignore -->
-        <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
-        <address class="footer-contacts">
-          <ul class="footer-contacts-list list">
-            <li class="footer-contacts-item">
-              <a
-                class="footer-contacts-link address link"
-                href="https://goo.gl/maps/namVYLT5pjn7duQN9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                м. Київ, пр-т Лесі Українки, 26
+      <div class="container footer-wrap">
+        <div class="footer-address-wrap">
+          <!-- prettier-ignore -->
+          <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
+          <address class="footer-contacts">
+            <ul class="footer-contacts-list list">
+              <li class="footer-contacts-item">
+                <a
+                  class="footer-contacts-link address link"
+                  href="https://goo.gl/maps/namVYLT5pjn7duQN9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  м. Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li class="footer-contacts-item">
+                <a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="footer-contacts-item">
+                <a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social-wrap">
+          <h3 class="footer-social-heading">приєднуйтесь</h3>
+          <ul class="footer-social-list list">
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="social-link-ico" width="20" height="20">
+                  <use href="./img/sprite.svg#instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="footer-contacts-item">
-              <a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="social-link-ico" width="20" height="20"><use href="./img/sprite.svg#twitter"></use></svg>
+              </a>
             </li>
-            <li class="footer-contacts-item">
-              <a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="social-link-ico" width="20" height="20"><use href="./img/sprite.svg#facebook"></use></svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="social-link-ico" width="20" height="20"><use href="./img/sprite.svg#linkedin"></use></svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
