--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-heading">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-btn" type="button" data-modal-open>Замовити послугу</button>
+          <button class="hero-btn btn" type="button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <!--========== FEATURES SECTION ==========-->
@@ -381,6 +381,17 @@
             </li>
           </ul>
         </div>
+        <div class="footer-signup-wrap">
+          <h3 class="footer-social-heading">Підпишіться на розсилку</h3>
+          <form class="footer-form">
+            <input type="email" class="footer-input" name="email" id="email" placeholder=" " />
+            <label class="footer-input-label" for="email">E-mail</label>
+            <button class="footer-btn btn" type="submit">
+              Підписатися
+              <svg class="footer-btn-icon" width="24" height="24"><use href="./img/sprite.svg#icon-send"></use></svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!--================= MODAL ==========-->
@@ -389,6 +400,49 @@
         <button class="close-btn" type="button" data-modal-close>
           <svg class="close-icon" width="18" height="18"><use href="./img/sprite.svg#close-black-btn"></use></svg>
         </button>
+        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+
+        <form class="modal-form">
+          <label class="form-label" for="name">Ім'я</label>
+          <div class="form-input-wrap">
+            <input class="form-input" type="text" name="name" id="name" />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./img/sprite.svg#person-black"></use>
+            </svg>
+          </div>
+
+          <label class="form-label" for="tel">Телефон</label>
+          <div class="form-input-wrap">
+            <input class="form-input" type="tel" name="tel" id="tel" />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./img/sprite.svg#phone-black"></use>
+            </svg>
+          </div>
+
+          <label class="form-label" for="mail">Пошта</label>
+          <div class="form-input-wrap">
+            <input class="form-input" type="email" name="mail" id="mail" />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./img/sprite.svg#email-black"></use>
+            </svg>
+          </div>
+
+          <label class="form-label" for="coment">Коментар</label>
+          <textarea class="form-text" name="coment" id="coment" placeholder="Введіть текст"></textarea>
+
+          <label class="checkbox-label">
+            <input class="form-checkbox" type="checkbox" name="terms" />
+            <span>
+              <svg class="checkbox-icon" width="16" height="15">
+                <use href="./img/sprite.svg#checkbox-checked"></use>
+              </svg>
+            </span>
+            Погоджуюся з розсилкою та приймаю&nbsp
+            <a href=" ">Умови договору</a>
+          </label>
+
+          <button class="form-btn btn" type="submit">Відправити</button>
+        </form>
       </div>
     </div>
 
